# kbd-backlight

./: .commitlintrc.json  .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  PKGBUILD  PROJECT_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  SEMANTIC_RELEASE.md  SETUP.md  config-example.toml  kbd-backlight-daemon.service  package.json
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: aur-publish.yml  ci.yml  commitlint.yml  dependabot-auto-merge.yml  release.yml  semantic-release.yml
profiles-example/: home.toml  mobile.toml  office.toml
src/: brightness.rs  config.rs  error.rs  ipc.rs  lib.rs  location.rs  monitors.rs  power.rs  rules.rs  video_detector.rs  wayland_idle.rs
src/cli/: main.rs
src/daemon/: main.rs
