[package]
name = "kbd-backlight"
version = "0.1.0"
edition = "2021"
authors = ["Ayush Jaipuriyar"]
description = "Intelligent keyboard backlight daemon for Linux laptops with automatic brightness control"
repository = "https://github.com/ayushjaipuriyar/kbd-backlight"
license = "MIT"
keywords = ["keyboard", "backlight", "daemon", "linux", "brightness"]
categories = ["command-line-utilities", "os::linux-apis"]

[[bin]]
name = "kbd-backlight-daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "kbd-backlight"
path = "src/cli/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
clap = { version = "4.4", features = ["derive"] }
x11rb = { version = "0.13", features = ["allow-unsafe-code", "screensaver"] }
proptest = "1.4"
nix = { version = "0.27", features = ["user", "signal"] }
chrono = "0.4"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
wayrs-client = "1.2"
wayrs-protocols = { version = "0.14", features = ["ext-idle-notify-v1"] }
wayrs-utils = { version = "0.17", features = ["seats"] }
zbus = { version = "5.12", default-features = false, features = ["tokio", "blocking"] }
regex = "1.10"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
